# weather-station

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  flake.nix  platformio.ini  sdkconfig.defaults
.github/workflows/: ci.yml
3d_files/: 1_base_with_text.stl  2a_tier_esp32.stl  2b_tier_solid.stl  2c_tier_louvred.stl  3a_plain roof.stl  3b2_rain_sensor_cover.stl  3b3_light_sensor_cover.stl  3b_roof_with_sensors.stl
docs/: mvp-assembly-guide.html  mvp-stations.md  nixify-handoff.md  nixify-plan.md  refactoring-roadmap.md
enclosure/: generate_enclosure.py
include/: config_store.h  factory_defaults.h  secrets.h.example  web_dashboard.h
main/: CMakeLists.txt
nix/: apps.nix  arduino-libs.nix  esp-idf.nix  firmware.nix  flash-layout.nix  variants.nix  xtensa-toolchain.nix
src/: config_store.cpp  main.cpp  web_dashboard.cpp
